test/corpus/module_def.txt
=================
Module Definition
=================

module ModuleNameA {}

module {: AttrName } ModuleNameB {}

module ModuleNameC.SubmoduleD {}

module ModuleNameE {
  module ModuleNameF {}
}

---

(source_file

  (TopDecl
    (SubModuleDecl
      (ModuleDefinition
        (ModuleQualifiedName
          (ModuleName
            (NoUSIdent
              (noUSNondigitIdChar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              )
            )
          )
        )
      )
    )

(TopDecl
    (SubModuleDecl
      (ModuleDefinition
        (Attribute
          (AttributeName
            (NoUSIdent
              (noUSNondigitIdChar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar))))
        (ModuleQualifiedName
          (ModuleName
            (NoUSIdent
              (noUSNondigitIdChar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              )
            )
          )
        )
      )
    )

(TopDecl
    (SubModuleDecl
      (ModuleDefinition
        (ModuleQualifiedName
          (ModuleName
            (NoUSIdent
              (noUSNondigitIdChar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
            )
          )
          (ModuleName
            (NoUSIdent
              (noUSNondigitIdChar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
            )
          )
        )
      )
    )
  )

 (TopDecl
    (SubModuleDecl
      (ModuleDefinition
        (ModuleQualifiedName
          (ModuleName
            (NoUSIdent
              (noUSNondigitIdChar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
              (idchar)
            )
          )
        )
        (TopDecl
          (SubModuleDecl
            (ModuleDefinition
              (ModuleQualifiedName
                (ModuleName
                  (NoUSIdent
                    (noUSNondigitIdChar)
                    (idchar)
                    (idchar)
                    (idchar)
                    (idchar)
                    (idchar)
                    (idchar)
                    (idchar)
                    (idchar)
                    (idchar)
                    (idchar)
                  )
                )
              )
            )
          )
        )
      )
    )
  )
 )
